--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node src/app.ts",
     "build": "rimraf dist && tsc",
     "start": "node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:watch": "jest --watch",
+    "test:unit": "jest --coverage --testPathPattern=unit",
+    "test:integration": "jest --coverage --testPathPattern=integration"
   },
   "keywords": [],
   "author": "",
@@ -23,10 +25,14 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.16.2",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
